cli/tests/snapshots/extract__extract_ingredient.snap
---
source: tests/extract.rs
info:
  program: c2patool
  args:
    - extract
    - ingredient
    - "--output"
    - /tmp/.tmpAZlIwc
    - /Users/nsalvemini/Documents/repos/c2patool/tests/fixtures/C.jpg
---
success: true
exit_code: 0
----- stdout -----
Sucessfully extracted ingredient to `/tmp/.tmpAZlIwc/ingredient.json`
Sucessfully extracted manifest data to `/tmp/.tmpAZlIwc/manifest_data.c2pa`

----- stderr -----
