cli/tests/snapshots/extract__extract_manifest-2.snap
---
source: tests/extract.rs
expression: "fs::read_to_string(&output_path)?"
---
"{\n  \"active_manifest\": \"contentauth:urn:uuid:a621a5d8-147d-499b-95d7-2eaff1009efc\",\n  \"manifests\": {\n    \"contentauth:urn:uuid:a621a5d8-147d-499b-95d7-2eaff1009efc\": {\n      \"claim_generator\": \"make_test_images/0.6.1 c2pa-rs/0.6.1\",\n      \"title\": \"C.jpg\",\n      \"format\": \"image/jpeg\",\n      \"instance_id\": \"xmp:iid:3de8baae-4de5-4961-8b5a-441bb699bf1b\",\n      \"thumbnail\": {\n        \"format\": \"image/jpeg\",\n        \"identifier\": \"self#jumbf=c2pa.assertions/c2pa.thumbnail.claim.jpeg\"\n      },\n      \"ingredients\": [],\n      \"assertions\": [\n        {\n          \"label\": \"stds.schema-org.CreativeWork\",\n          \"data\": {\n            \"@context\": \"http://schema.org/\",\n            \"@type\": \"CreativeWork\",\n            \"author\": [\n              {\n                \"@type\": \"Person\",\n                \"name\": \"Gavin Peacock\"\n              }\n            ]\n          },\n          \"kind\": \"Json\"\n        },\n        {\n          \"label\": \"c2pa.actions\",\n          \"data\": {\n            \"actions\": [\n              {\n                \"action\": \"c2pa.created\"\n              },\n              {\n                \"action\": \"c2pa.drawing\",\n                \"parameters\": {\n                  \"name\": \"gradient\"\n                }\n              }\n            ]\n          }\n        }\n      ],\n      \"signature_info\": {\n        \"alg\": \"Ps256\",\n        \"issuer\": \"C2PA Test Signing Cert\",\n        \"cert_serial_number\": \"720724073027128164015125666832722375746636448153\"\n      },\n      \"label\": \"contentauth:urn:uuid:a621a5d8-147d-499b-95d7-2eaff1009efc\"\n    }\n  }\n}"
