cli/tests/snapshots/extract__extract_manifest.snap
---
source: tests/extract.rs
info:
  program: c2patool
  args:
    - extract
    - manifest
    - "--output"
    - /tmp/.tmphetwKJ/test_extract_manifest.json
    - /Users/nsalvemini/Documents/repos/c2patool/tests/fixtures/C.jpg
---
success: true
exit_code: 0
----- stdout -----
Sucessfully extracted manifest to `/tmp/.tmphetwKJ/test_extract_manifest.json`

----- stderr -----
